# nbloomf.md

./: .gitignore  README.md  about.markdown  about.md  amd-rules.txt  index.markdown  index.md  makefile  mkfile  nbloomf-md.cabal  projects.md  site.hs  site.lhs  stack.yaml
classes/aa/: index.md
classes/ca/: index.markdown  index.md  symmetry-live-demo.md  transformations-live-demo.md  transformations.md
classes/calc/: index.md
classes/coal/: index.md  transformations-live-demo.md
classes/geom/: index.md
classes/parp/: index.md
classes/parp/notes/: hw1.md  hw2.md  lec01.md  (+27 more)
classes/prfs/: index.md
classes/proofs/: index.md
classes/ring/: index.md
classes/ssem/: index.md
classes/stat/: index.md
css/: default.css
draft/: 2018-04-05-wave-function-collapse.lhs  2018-04-14-generating-images.lhs
draft/hs-notes/: Monad.lhs  Writer.lhs  hs-notes.cabal
drafts/: 2010-12-21-a-domain-which-is-not-atomic.markdown  2015-04-01-natural-numbers.lhs  2016-06-07-a-haskell-client-for-the-shopify-rest-api.md  2017-02-28-programs-from-theorems.md  2017-02-28-relative-references-for-loeb-spreadsheets.lhs  2017-03-08-project-euler-solution-4.lhs  Arithmetic.lhs  PrimitiveRecursion.lhs
hooks/: pre-commit.sh
pages/: about.md  alg-notes.md  amd.md  contact.md  geo-notes.md  ml.md  projects.md
pages/amd/: index.md
pages/sth/: formats.md  index.md
pdf/graph-paper/: hex.tex  rect.tex
posts/: 2010-06-17-a-lifting-property-for-finite-abelian-groups.markdown  2010-06-17-a-lifting-property-for-finite-abelian-groups.md  2010-06-25-isomorphisms-among-semidirect-products-by-a-cyclic-group.md  2010-06-26-classify-the-groups-of-order-1805.md  2014-05-01-natural-numbers.md  2014-05-07-from-arrows-to-programs.lhs  2014-05-07-from-arrows-to-programs.md  2014-05-14-primitive-recursion.md  2014-06-01-addition.md  2015-09-27-chocolate-chip-cookies.md  2015-10-03-quotations.md  2015-10-03-simple-vs-complex.md  2015-10-10-printable-graph-paper.md  2016-02-06-useful-student-evaluation-data.md  2016-02-08-software-tools-in-haskell-noop.lhs  2016-02-09-caratheodory's-characterization-of-the derivative.md  2016-02-10-software-tools-in-haskell-copy.lhs  2016-02-10-software-tools-in-haskell.md  2016-02-11-software-tools-in-haskell-copy-charcount-linecount.md  2016-02-11-software-tools-in-haskell-count.lhs  2016-02-11-sth-copy-count.md  2016-02-12-software-tools-in-haskell-wordcount.lhs  2016-02-13-software-tools-in-haskell-sentcount.lhs  2016-02-14-software-tools-in-haskell-glyphcount.lhs  2016-02-15-software-tools-in-haskell-detab.lhs  2016-02-16-software-tools-in-haskell-charcombine.lhs  2016-02-17-software-tools-in-haskell-charfullwidth.lhs  2016-02-18-software-tools-in-haskell-entab.lhs  2016-02-19-software-tools-in-haskell-echo.lhs  2016-02-20-software-tools-in-haskell-overstrike.lhs  2016-02-21-software-tools-in-haskell-unescape.lhs  2016-02-22-software-tools-in-haskell-escape.lhs  2016-02-22-software-tools-in-haskell-glyphcount-wordcount-sentcount.md  2016-02-22-software-tools-in-haskell-wordcount-sentcount.md  2016-02-22-sth-glyphcount-wordcount-sentcount.md  2016-02-23-software-tools-in-haskell-compress.lhs  2016-02-24-software-tools-in-haskell-expand.lhs  2016-02-25-software-tools-in-haskell-crypt.lhs  2016-02-25-software-tools-in-haskell-detab-charcombine-charfullwidth.md  2016-02-25-software-tools-in-haskell-detab.md  (+47 more)
posts/arithmetic-made-difficult/: AllAndAny.lhs  And.lhs  At.lhs  BailoutFold.lhs  BailoutRecursion.lhs  Booleans.lhs  Cat.lhs  Choose.lhs  Clone.lhs  Common.lhs  Composition.lhs  ConsumingFold.lhs  CoprimeTo.lhs  Count.lhs  DSV.lhs  Dedupe.lhs  Delete.lhs  Disjoint.lhs  DisjointUnions.lhs  Divides.lhs  DivisionAlgorithm.lhs  DoubleBailoutFold.lhs  DoubleFold.lhs  DoubleNaturalRecursion.lhs  Elt.lhs  EqualTo.lhs  Equals.lhs  Exponentiation.lhs  Filter.lhs  FindSmallest.lhs  Flip.lhs  Functions.lhs  GreatestCommonDivisor.lhs  HeadAndTail.lhs  Implies.lhs  Infix.lhs  IsPrime.lhs  LeastCommonMultiple.lhs  LeftFold.lhs  Length.lhs  (+48 more)
posts/ml/: CompositeModels.lhs  GradientChecking.lhs  GradientDescent.lhs  Gradients.lhs  IndexIsos.lhs  Indices.lhs  SupervisedModels.lhs  TensorFunctions.lhs  Tensors.lhs  ml.cabal  nbloomf-ml.cabal  prologue.md
posts/ml/Test/: Tensors.lhs
posts/munge/: Align.lhs  Crunch.lhs  Dedent.lhs  Doppler.lhs  Indent.lhs  OrderedBy.lhs  munge.cabal
posts/music/: incredible-bongo-band-apache.md
posts/project-euler/: pe.cabal  solution-1.lhs  solution-2.lhs  solution-3.lhs  solution-4.lhs  solution-5.lhs  solution-6.lhs  solution-7.lhs
posts/recipes/: baked-taquitos.md  chocolate-chip-cookies.md  gluten-free-banana-bread.md  mashed-potato-balls.md  pizza-soup.md  tikka-masala.md
posts/software-tools-in-haskell/: archive.lhs  bubble.lhs  charcombine.lhs  charfullwidth.lhs  charreplace.lhs  compare.lhs  compress.lhs  concat.lhs  copy.lhs  count.lhs  crypt.lhs  detab.lhs  echo.lhs  entab.lhs  escape.lhs  examine.lhs  expand.lhs  getlines.lhs  glyphcount.lhs  import.lhs  linenumber.lhs  noop.lhs  overstrike.lhs  paginate.lhs  pslineprint.lhs  sentcount.lhs  sth.cabal  tail.lhs  translit.lhs  unescape.lhs  wordcount.lhs  wye.lhs
posts/software-tools-in-haskell/Lib/: Backslash.lhs
raw/: cleanup.awk  spiff.sh  symmetry-live-demo.html  transformations-live-demo.html
raw/parp/: xsede_hw1_2017.tar
sniff/amd/: import-list.txt  latex-whitelist.txt  rules.txt
templates/: amd-sec.html  amd.html  archive.html  default.html  hr.html  literate-haskell.html  macros.html  ml.html  post-list.html  post.html  project-euler-solutions.html  sth-tools.html
templates/snip/: favicons.html
test/amd/: all-any.test  at.test  boolean.test  cat.test  choose.test  coprime.test  count.test  dedupe.test  delete.test  div.test  divalg.test  elt.test  filter.test  gcd.test  infix.test  lcm.test  lcp.test  length.test  leq.test  map.test  max_min.test  minus.test  nat.test  power.test  prefix.test  prime.test  range.test  repeat.test  rev.test  select.test  sublist.test  tails-inits.test  take-drop.test  times.test  tuple.test  unique.test  unzip.test  zip.test
(+64 files in other folders)
