name:          posts
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

executable rendering-trees
  main-is:
    2017-12-06-rendering-trees.lhs
  ghc-options:
    -main-is RenderingTrees.main
  build-depends:
    base == 4.*,
    directory-tree >= 0.12.0,
    lispparser >= 0.3,
    parsec >= 3.1.11
  ghc-options:
    -threaded
  default-language:
    Haskell2010
