name:          posts
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

executable balance
  main-is:
    2018-01-16-balancing-parentheses.lhs
  ghc-options:
    -main-is BalanceDelimiters.main
  ghc-options:
    -threaded
  build-depends:
    base == 4.*
  default-language:
    Haskell2010

executable rendering-trees
  main-is:
    2017-12-06-rendering-trees.lhs
  ghc-options:
    -main-is RenderingTrees.main
  build-depends:
    base == 4.*,
    directory-tree >= 0.12.0,
    lispparser >= 0.3,
    parsec >= 3.1.11,
    hxt >= 9.3.1
  ghc-options:
    -threaded
  default-language:
    Haskell2010

test-suite relative-references-for-loeb-spreadsheets
  type:
    exitcode-stdio-1.0
  main-is:
    2017-02-28-relative-references-for-loeb-spreadsheets.lhs
  ghc-options:
    -main-is LoebSheets.main
  default-language:
    Haskell2010
  build-depends:
    base >= 4.0 && < 5.0

test-suite pai-gow-poker
  type:
    exitcode-stdio-1.0
  main-is:
    2017-03-30-pai-gow-poker.lhs
  ghc-options:
    -main-is PaiGow.main
  default-language:
    Haskell2010
  build-depends:
    base >= 4.0 && < 5.0,
    rvar >= 0.2.0,
    mtl >= 2.2,
    transformers >= 0.2.4,
    random-fu >= 0.2.6,
    containers >= 0.5.6,
    random-extras >= 0.19
