name:          hs-notes
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

test-suite hs-writer
  main-is: Writer.lhs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -main-is Writer.test_main
  build-depends:
    base >= 4.0 && < 5.0,
    QuickCheck >= 2.10.1
  other-modules:
    Monad
