name:          amd
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  default-language:
    Haskell2010
  exposed-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    MutatingRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    MaxAndMin,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple,
    FindSmallest,
    IsPrime,
    Exponentiation,
    Choose,
    Lists,
    HeadAndTail,
    LeftFold,
    DoubleFold,
    Snoc,
    Reverse,
    Cat,
    Length
  build-depends:
    base == 4.*,
    QuickCheck



test-suite amd-boolean
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Booleans.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Booleans.main_boolean

test-suite amd-tuple
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tuples.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Tuples.main_tuple
  other-modules:
    Booleans

test-suite amd-disjoint-union
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DisjointUnions.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is DisjointUnions.main_disjoint_union
  other-modules:
    Booleans

test-suite amd-nats
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: NaturalNumbers.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is NaturalNumbers.main_nats
  other-modules:
    Booleans,
    Unary,
    DisjointUnions

test-suite amd-plus
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Plus.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Plus.main_plus
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion

test-suite amd-times
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Times.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Times.main_times
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    Plus

test-suite amd-minus
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Minus.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Minus.main_minus
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times

test-suite amd-leq
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LessThanOrEqualTo.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is LessThanOrEqualTo.main_leq
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus

test-suite amd-max-min
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: MaxAndMin.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is MaxAndMin.main_max_min
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-divalg
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: DivisionAlgorithm.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is DivisionAlgorithm.main_divalg
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-div
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Divides.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Divides.main_div
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm

test-suite amd-gcd
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: GreatestCommonDivisor.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is GreatestCommonDivisor.main_gcd
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion

test-suite amd-coprime
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: CoprimeTo.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is CoprimeTo.main_coprime
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor

test-suite amd-lcm
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LeastCommonMultiple.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is LeastCommonMultiple.main_lcm
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo

test-suite amd-findsmallest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: FindSmallest.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is FindSmallest.main_findSmallest
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-prime
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: IsPrime.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is IsPrime.main_prime
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple,
    FindSmallest

test-suite amd-power
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Exponentiation.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Exponentiation.main_power
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo,
    DivisionAlgorithm,
    Divides,
    NormRecursion,
    GreatestCommonDivisor,
    CoprimeTo,
    LeastCommonMultiple

test-suite amd-choose
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Choose.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Choose.main_choose
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion,
    BailoutRecursion,
    DoubleNaturalRecursion,
    Plus,
    Times,
    Minus,
    LessThanOrEqualTo

test-suite amd-head-tail
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: HeadAndTail.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is HeadAndTail.main_head_tail
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists

test-suite amd-foldl
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LeftFold.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is LeftFold.main_foldl
  other-modules:
    Booleans,
    DisjointUnions,
    Unary,
    Lists

test-suite amd-snoc
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Snoc.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Snoc.main_snoc
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold

test-suite amd-rev
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Reverse.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Reverse.main_rev
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc

test-suite amd-cat
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Cat.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Cat.main_cat
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse

test-suite amd-length
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Length.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Length.main_length
  other-modules:
    Booleans,
    Tuples,
    DisjointUnions,
    Unary,
    NaturalNumbers,
    SimpleRecursion
    BailoutRecursion,
    Plus,
    Lists,
    HeadAndTail,
    LeftFold,
    Snoc,
    Reverse,
    Cat



test-suite amd-at
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: At.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is At.main_at
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, Length, SimpleRecursion, BailoutRecursion, DisjointUnions

test-suite amd-map
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Map.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Map.main_map
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Length, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-range
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Range.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Range.main_range
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, Length,
                 SimpleRecursion, BailoutRecursion, DisjointUnions

test-suite amd-zip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Zip.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Zip.main_zip
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, BailoutRecursion, SimpleRecursion, DisjointUnions

test-suite amd-unzip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Unzip.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Unzip.main_unzip
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-prefix
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Prefix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Prefix.main_prefix
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-lcp
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: LongestCommonPrefix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is LongestCommonPrefix.main_lcp
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, Prefix, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-all-any
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: AllAndAny.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is AllAndAny.main_all_any
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, Prefix, SimpleRecursion,
                 BailoutRecursion, DisjointUnions, HeadAndTail, LeftFold, Snoc

test-suite amd-tails-inits
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TailsAndInits.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is TailsAndInits.main_tails_inits
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Prefix,
                 LongestCommonPrefix, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-filter
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Filter.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Filter.main_filter
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Prefix,
                 LongestCommonPrefix, TailsAndInits, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-elt
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Elt.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Elt.main_elt
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter
                 LongestCommonPrefix, TailsAndInits, Prefix,
                 SimpleRecursion, BailoutRecursion, DisjointUnions

test-suite amd-count
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Count.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Count.main_count
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Prefix, SimpleRecursion, BailoutRecursion, DisjointUnions

test-suite amd-repeat
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Repeat.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Repeat.main_repeat
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, SimpleRecursion, BailoutRecursion, DisjointUnions

test-suite amd-sublist
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Sublist.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Sublist.main_sublist
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, SimpleRecursion
                 BailoutRecursion, DisjointUnions

test-suite amd-infix
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Infix.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Infix.main_isInfix
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Sublist, SimpleRecursion,
                 BailoutRecursion, DisjointUnions

test-suite amd-select
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Select.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Select.main_select
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Choose, Sublist,
                 SimpleRecursion, BailoutRecursion,
                 MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-unique
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Unique.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Unique.main_unique
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Choose,
                 Sublist, SimpleRecursion, BailoutRecursion,
                 MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-delete
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Delete.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Delete.main_delete
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Choose,
                 Sublist, Unique, SimpleRecursion,
                 BailoutRecursion, MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-dedupe
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Dedupe.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is Dedupe.main_dedupe
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Delete,
                 Choose, Sublist, Unique, SimpleRecursion,
                 BailoutRecursion, MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-take-drop
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeAndDrop.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is TakeAndDrop.main_take_drop
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Delete,
                 Dedupe, Choose, Sublist, Unique,
                 SimpleRecursion, BailoutRecursion, MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-takebut-dropbut
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeButAndDropBut.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is TakeButAndDropBut.main_takebut_dropbut
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Delete,
                 Dedupe, Choose, Sublist, Unique, TakeAndDrop,
                 SimpleRecursion, BailoutRecursion, MutatingRecursion, DisjointUnions, DoubleNaturalRecursion

test-suite amd-takewhile-dropwhile
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TakeWhileAndDropWhile.lhs
  build-depends: base == 4.*, QuickCheck
  ghc-options: -main-is TakeWhileAndDropWhile.main_takewhile_dropwhile
  other-modules: Booleans, Lists, NaturalNumbers, Unary,
                 Reverse, Cat, Plus, LessThanOrEqualTo, Minus,
                 Times, At, Map, UnfoldN, MaxAndMin, Range,
                 Tuples, Length, Zip, AllAndAny, Filter,
                 LongestCommonPrefix, TailsAndInits, Elt,
                 Count, Prefix, Repeat, Select, Delete,
                 Dedupe, Choose, Sublist, Unique,
                 SimpleRecursion, BailoutRecursion, MutatingRecursion, DisjointUnions, DoubleNaturalRecursion
